[gd_scene load_steps=4 format=3 uid="uid://byc7se7k0wfad"]

[ext_resource type="Script" uid="uid://nx224gcg15g1" path="res://scenes/main.gd" id="1_c0h74"]
[ext_resource type="PackedScene" uid="uid://dhouj103pnqy3" path="res://scenes/levels/easy_locks.tscn" id="2_tbgi4"]
[ext_resource type="Theme" uid="uid://cav6s4wk6wpbp" path="res://themes/ui.tres" id="3_sugp2"]

[node name="Main" type="Node3D"]
script = ExtResource("1_c0h74")
current_scene = ExtResource("2_tbgi4")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
bus = &"Music"

[node name="ScrimLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="FadeScrim" type="ColorRect" parent="ScrimLayer"]
modulate = Color(1, 1, 1, 0.47451)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="VersionInfo" type="CanvasLayer" parent="."]
layer = 101

[node name="CanvasModulate" type="CanvasModulate" parent="VersionInfo"]
position = Vector2(10, 0)
color = Color(1, 1, 1, 0.752941)

[node name="TopRight" type="MarginContainer" parent="VersionInfo"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -24.0
offset_bottom = 21.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_filter = 2
theme = ExtResource("3_sugp2")
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VersionInfo/TopRight"]
layout_mode = 2

[node name="LblCopyright" type="Label" parent="VersionInfo/TopRight/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 10
text = "Â© 2025 Matt Giuca"

[node name="HbxVersionInfo" type="HBoxContainer" parent="VersionInfo/TopRight/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[node name="LblVersion" type="Label" parent="VersionInfo/TopRight/VBoxContainer/HbxVersionInfo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10

[node name="Label" type="Label" parent="VersionInfo/TopRight/VBoxContainer/HbxVersionInfo"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10
text = "/"

[node name="LblGitHash" type="Label" parent="VersionInfo/TopRight/VBoxContainer/HbxVersionInfo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10

[node name="Label2" type="Label" parent="VersionInfo/TopRight/VBoxContainer/HbxVersionInfo"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10
text = "/"

[node name="LblGodotVersion" type="Label" parent="VersionInfo/TopRight/VBoxContainer/HbxVersionInfo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10

[node name="WebXRSetupUI" type="CanvasLayer" parent="."]
layer = 102
visible = false

[node name="Scrim" type="ColorRect" parent="WebXRSetupUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.5019608)

[node name="BtnEnterWebXR" type="Button" parent="WebXRSetupUI"]
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.5
offset_top = -15.5
offset_right = 61.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Enter WebXR"

[node name="XROrigin" type="XROrigin3D" parent="."]

[node name="XRCamera" type="XRCamera3D" parent="XROrigin"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)
current = true

[node name="LeftHand" type="XRController3D" parent="XROrigin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, -0.5)
tracker = &"left_hand"

[node name="RightHand" type="XRController3D" parent="XROrigin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5)
tracker = &"right_hand"

[connection signal="pressed" from="WebXRSetupUI/BtnEnterWebXR" to="." method="_on_btn_enter_web_xr_pressed"]
